--- a/src/App.css
+++ b/src/App.css
@@ -410,7 +410,7 @@ footer p {
   display: grid;
   grid-gap: 20px;
   grid-template-columns: 30% 70%;
-  min-height: 100px;
+  min-height: 100vh;
 }
 
 .photo-resume {
