--- a/src/App.css
+++ b/src/App.css
@@ -418,15 +418,11 @@ footer p {
   height: 250px;
   display: grid;
   margin: 0 auto;
-  background-image: url(img/_DSC1335.JPG);
+  background-image: url(img/low.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   border-radius: 50%;
-  transform: rotate(90deg);
-  transition: 5s;
-  opacity: 1;
-  transition-delay: 250ms;
 }
 
 
