--- a/src/App.css
+++ b/src/App.css
@@ -230,7 +230,7 @@
 }
 
 .pic2 {
-  background-image: url(img/banner.jpg);
+  background-image: url(img/picture.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -258,7 +258,7 @@
 }
 
 .pic5 {
-  background-image: url(img/background.jpg);
+  background-image: url(img/oldself.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
